Add grid columns to index and about

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section id="project-1" class="row">
           <div class="container">
 
-            <div class="col-md-6">
+            <div class="column col-md-6 col-lg-8">
               <!-- column 1 starts -->
               <!-- Q: I would love to explore how to make a hover-over effect for this section  -->
               <a href="design-a-new-investment-product.html">
@@ -79,7 +79,7 @@
               </a>
             </div>
 
-            <div class="col-md-6">
+            <div class="column col-md-6 col-lg-4">
               <!-- column 2 starts -->
               <h3>Launch a New Investment Product</h3>
               <p>Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
@@ -94,7 +94,7 @@
         <section id="project-2" class="row">
           <div class="container">
 
-            <div class="col-md-6">
+            <div class="column col-md-6 col-lg-4">
               <!-- Column 1 starts -->
               <h3>IT Service Management Design</h3>
               <p>Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
@@ -102,7 +102,7 @@
             </div>
 
             <!-- column 2 starts -->
-            <div class="col-md-6">
+            <div class="column col-md-6 col-lg-8">
               <a href="case2">
                 <picture>
                   <source srcset="img/home/ITSM-alpha@1.png" media="(max-width:767px)">
