Update grid column rules

--- a/index.html
+++ b/index.html
@@ -38,22 +38,24 @@
   <main id="hero">
     <!-- Hero section: my intro -->
     <div class="container">
+      <div class="row">
 
-      <div>
-        <h1>Hi! I’m Tutu.</h1>
-        <p class="hero-intro">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
-          As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. </p>
-        <p class="hero-intro">To me, design process empowers me to learn about people & technology and to shape a more preferable future.</p>
+        <div class="column col-lg-8">
+          <h1>Hi! I’m Tutu.</h1>
+          <p class="hero-intro">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
+            As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. </p>
+          <p class="hero-intro">To me, design process empowers me to learn about people & technology and to shape a more preferable future.</p>
+        </div>
+
+        <div id="hero-contact" class="column col-lg-4">
+          <p class="mini-title">LOCATION</p>
+          <p>San Francisco Bay Area</p>
+          <p class="mini-title">EMAIL</p>
+          <p>yunwentu22@gmail.com</p>
+          <a href="files/YunwenTu_CV.pdf" download target="_blank"> RESUME </a>
+        </div>
+
       </div>
-
-      <div id="hero-contact">
-        <p class="mini-title">LOCATION</p>
-        <p>San Francisco Bay Area</p>
-        <p class="mini-title">EMAIL</p>
-        <p>yunwentu22@gmail.com</p>
-        <a href="files/YunwenTu_CV.pdf" download target="_blank"> RESUME </a>
-      </div>
-
     </div>
 
     <!-- Projects -->
