--- a/about.html
+++ b/about.html
@@ -100,41 +100,46 @@
       <div id="skills">
         <div class="container">
 
-          <h2>Skills & Tools</h2>
+          <div class="column col-lg-4">
+            <h2>Skills & Tools</h2>
+          </div>
 
           <div class="row">
-            <section class="column col-md-6 col-lg-4">
-              <img src="img/icons/uxdesign.png" alt="ux design icon">
-              <h3 class="tool">UX/UI Design</h3>
-              <ul>
-                <li>User research/synthesis/test</li>
-                <li>Lo-fi & hi-fi prototype/design system</li>
-                <li>Sketch App/Invision/Figma</li>
-                <li>HTML</li>
-              </ul>
-            </section>
+            <div cass="column col-lg-8">
 
-            <section class="column col-md-6 col-lg-4">
-              <img src="img/icons/cocreation.png" alt="co-creation icon">
-              <h3 class="tool">Co-creation</h3>
-              <ul>
-                <li>Design Sprint/Design Thinking</li>
-                <li>Future thinking frameworks</li>
-                <li>Design experimentation</li>
-              </ul>
-            </section>
+                <section class="column col-md-6 col-lg-4">
+                  <img src="img/icons/uxdesign.png" alt="ux design icon">
+                  <h3 class="tool">UX/UI Design</h3>
+                  <ul>
+                    <li>User research/synthesis/test</li>
+                    <li>Lo-fi & hi-fi prototype/design system</li>
+                    <li>Sketch App/Invision/Figma</li>
+                    <li>HTML</li>
+                  </ul>
+                </section>
 
-            <section class="column col-md-6 col-lg-4">
-              <img src="img/icons/making.png" alt="2D 3D making icon">
-              <h3 class="tool">Making</h3>
-              <ul>
-                <li>Photoshop/Illustrator/Indesign</li>
-                <li>Photography/Lightroom/Premiere</li>
-                <li>Model-making/laser cut/3D print</li>
-                <li>Rhino/Solidworks/Keyshot</li>
-              </ul>
-            </section>
+                <section class="column col-md-6 col-lg-4">
+                  <img src="img/icons/cocreation.png" alt="co-creation icon">
+                  <h3 class="tool">Co-creation</h3>
+                  <ul>
+                    <li>Design Sprint/Design Thinking</li>
+                    <li>Future thinking frameworks</li>
+                    <li>Design experimentation</li>
+                  </ul>
+                </section>
 
+                <section class="column col-md-6 col-lg-4">
+                  <img src="img/icons/making.png" alt="2D 3D making icon">
+                  <h3 class="tool">Making</h3>
+                  <ul>
+                    <li>Photoshop/Illustrator/Indesign</li>
+                    <li>Photography/Lightroom/Premiere</li>
+                    <li>Model-making/laser cut/3D print</li>
+                    <li>Rhino/Solidworks/Keyshot</li>
+                  </ul>
+                </section>
+
+            </div>
           </div>
 
         </div> <!-- skills ends -->
