--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -44,21 +44,23 @@
     </div>
 
     <div>
-      <div>
+      <div class="container">
         <h1>Launch a New Investment Product</h1>
       </div>
     </div>
 
     <div>
       <!-- overview starts -->
-      <div id="overview">
+      <div id="overview" class="container">
 
-        <div>
+        <div class="hidden">
           <h2>Overview</h2>
         </div>
 
-        <div>
-          <section>
+        <div class="row">
+
+          <section class="column col-md-6 col-lg-4">
+            <h3>Overview</h3>
             <div>
               <p class="mini-title">Design Duration</p>
               <p>3.5 months (2018)</p>
@@ -75,13 +77,9 @@
               <p class="mini-title">Role</p>
               <p>Product designer (* Collaborated with a team in user research and another designer in the web design process)</p>
             </div>
-            <div>
-              <p class="mini-title">Services</p>
-              <p>User research, responsive web design, UX testing, marketing assets & document design </p>
-            </div>
           </section>
 
-          <section>
+          <section class="column col-md-6 col-lg-8">
             <div>
               <h3>Purpose</h3>
               <p>Design and launch a new real estate investment service, and build a website to support that.</p>
@@ -105,18 +103,21 @@
       </div>
     </div> <!-- overview ends -->
 
-    <div>
+    <div id="details">
       <!-- project detail starts -->
-      <div id="details">
-        <h2> The Moments</h2>
+      <div class="row">
 
-        <section>
+        <div class="container">
+        <h2> The Moments</h2>
+      </div>
+
+        <section class="container">
           <h3>Engaging and building trust with users </h3>
           <p>Within a 3-month timeframe, I and another designer together constructed a website with the product and marketing team. During the first month, I have worked closely with the product team on user research, competitor research, business
             model validation, and end-to-end experience. After the research phase, a copywriter joined and we were able to fast-paced the development of contents, architecture, a new style guide, and the final website design and iterations. </p>
         </section>
 
-        <section>
+        <section class="container">
           <h3>The starting point and the aims were</h3>
           <ul>
             <li>Launching an online real estate investment service which takes care of all the rental management efforts, so that the investor can invest in remote properties with less work.</li>
@@ -126,15 +127,14 @@
           </ul>
         </section>
 
-        <section>
+        <section class="container">
           <h3>Design Principle: Credibility > Simplicity</h3>
           <p>When working for clients in many industries, the common goal is to create an intuitive and simple experience for the vast majority of users. However, one important experience I have learned from this project is, in some industries, such
             as financial and healthcare, a “smooth UX flow” is usually prioritized instead of “Credibility” during decision-making. </p>
           <p>In this case, we had to communicate information accurately and clearly to build trust, and lead to closing deals. Additionally, we wanted the visitors to feel exclusive to the offerings. </p>
         </section>
 
-        <section>
-          <!-- Q!!! I started to feel confused if I should add more <div> here -->
+        <section class="container">
           <h3>Discovery Interviews</h3>
           <p>Since the targeted users are accredited investors, I conducted some interviews with investors who had the same qualifications as the accredited investors, previous customers from the client company, and registered investment advisors
             (RIA). </p>
@@ -146,7 +146,7 @@
           <p>(3 key values that got the users excited)</p>
         </section>
 
-        <section>
+        <section class="container">
           <h4>Key learnings that guided the design decisions: </h4>
           <ol>
             <li>They liked the concept of a hassle-free investment process for saving their time and energy. </li>
@@ -163,7 +163,7 @@
           </picture>
         </section>
 
-        <section>
+        <section class="container">
           <h3>Information Architecture and Design Messaging</h3>
           <p>With the help of a copywriter and lessons learned from interviews & some wireframe testing, we were able to finalize the content strategy for the website in time. Once the strategy was developed, the next challenge was to make our
             website informative, supported by reliable data sources, and efficient enough to engage with the investors.</p>
@@ -182,7 +182,7 @@
           </ul>
         </section>
 
-        <section>
+        <section class="container">
           <h3>Iterating the Contents</h3>
           <p>Once the goals and website architecture were clear, it then allowed us to focus on the brand messaging and details. </p>
 
@@ -193,7 +193,7 @@
           <p>(Testing messaging on the homepage)</p>
         </section>
 
-        <section>
+        <section class="container">
           <h3>Iterating the VI and Design System</h3>
           <p>Based on our persona and interview insights, I did some thorough research on the visual language of premium services/products and their everyday go-to website, from luxurious airlines, investment platforms, to Financial TImes and etc.
             This really helped us to analyze which color palettes and typography is considered more SOPHISTICATED, PREMIUM, and HI-TECH. </p>
@@ -215,7 +215,7 @@
             the process. </p>
         </section>
 
-        <section>
+        <section class="container">
           <h3>Here’s the final result</h3>
           <picture>
             <source srcset="img/roofs/rs-final-1@1.png" media="(max-width:767px)">
