Add class to # link

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
           <li><a href="index.html#projects" target="_self">Projects</a></li>
           <li><a href="about.html" target="_self">About</a></li>
           <!-- To add in the future <li><a href="#">News</a></li>  -->
-          <li><a href="#contact" target="_self">Contact!</a></li>
+          <li><a href="#contact" target="_self" class="bookmark">Contact!</a></li>
         </ul>
       </nav>
     </div>
