--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <a href="index.html"><img src="img/home/Logo-142x100.png" class="logo" alt="Tutu Logo"></a>
       <nav>
         <ul>
-          <li><a href="index.html#projects" target="_self">Projects</a></li>
+          <li><a href="index.html#projects" target="_self" class="bookmark">Projects</a></li>
           <li><a href="about.html" target="_self">About</a></li>
           <!-- To add in the future <li><a href="#">News</a></li>  -->
-          <li><a href="#contact" target="_self">Contact!</a></li>
+          <li><a href="#contact" target="_self" class="bookmark">Contact!</a></li>
         </ul>
       </nav>
     </div>
