--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             <path class="st1" d="M692,307.1c-0.8,0-1.5-0.7-1.5-1.5v-7.1c0-0.8,0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5v7.1
               							C693.5,306.5,692.8,307.1,692,307.1z" />
                           </g>
-                          <path class="st2" class="bridge" d="M649.9,430v-48.1h3.1v-37.6h3.1v-39.5h6.7v3.4h25.8v-3.4h6.7v39.5h3.1v37.6h3.1V430h3.1v128.5H647V430
+                          <path class="bridge st2" d="M649.9,430v-48.1h3.1v-37.6h3.1v-39.5h6.7v3.4h25.8v-3.4h6.7v39.5h3.1v37.6h3.1V430h3.1v128.5H647V430
               						H649.9z M689.3,319.7c0-2.8-2.3-5.1-5.1-5.1h-16.9c-2.8,0-5.1,2.3-5.1,5.1v19.5c0,2.8,2.3,5.1,5.1,5.1h16.9
               						c2.8,0,5.1-2.3,5.1-5.1V319.7z M692.1,357.3c0-2.8-2.3-5.1-5.1-5.1h-22.7c-2.8,0-5.1,2.3-5.1,5.1v19.5c0,2.8,2.3,5.1,5.1,5.1
               						H687c2.8,0,5.1-2.3,5.1-5.1V357.3z M694.8,394.9c0-2.8-2.3-5.1-5.1-5.1h-28.1c-2.8,0-5.1,2.3-5.1,5.1v30c0,2.8,2.3,5.1,5.1,5.1
@@ -369,7 +369,7 @@
                             <path class="st1" d="M366.4,131.6c-0.8,0-1.5-0.7-1.5-1.5v-11.8c0-0.8,0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5v11.8
               							C367.9,130.9,367.3,131.6,366.4,131.6z" />
                           </g>
-                          <path class="st2" class="bridge" d="M296.7,336.4v-79.9h5.1v-62.4h5.1v-65.5H318v5.6h42.9v-5.6h11.2v65.5h5.1v62.4h5.1v79.9h5.1v213.1h-95.6
+                          <path class="bridge st2" d="M296.7,336.4v-79.9h5.1v-62.4h5.1v-65.5H318v5.6h42.9v-5.6h11.2v65.5h5.1v62.4h5.1v79.9h5.1v213.1h-95.6
               						V336.4H296.7z M361.9,153.4c0-4.6-3.8-8.4-8.4-8.4h-28.1c-4.6,0-8.4,3.8-8.4,8.4v32.3c0,4.6,3.8,8.4,8.4,8.4h28.1
               						c4.6,0,8.4-3.8,8.4-8.4V153.4z M366.7,215.8c0-4.6-3.8-8.4-8.4-8.4h-37.7c-4.6,0-8.4,3.8-8.4,8.4v32.3c0,4.6,3.8,8.4,8.4,8.4
               						h37.7c4.6,0,8.4-3.8,8.4-8.4V215.8z M371.2,278.2c0-4.6-3.8-8.4-8.4-8.4h-46.7c-4.6,0-8.4,3.8-8.4,8.4v49.7
@@ -401,7 +401,7 @@
               								L320.5,531C320.4,531.2,320.1,531.3,319.8,531.3z" />
                             </g>
                           </g>
-                          <rect x="283.2" y="549.5" class="st8" width="112.5" height="22.5" />
+                          <rect x="283.2" y="549.5" class="bridge st8" width="112.5" height="22.5" />
                           <g>
                             <path class="st6" d="M317,153.4c0-4.6,3.8-8.4,8.4-8.4h28.1c4.6,0,8.4,3.8,8.4,8.4v32.3c0,4.6-3.8,8.4-8.4,8.4h-28.1
               							c-4.6,0-8.4-3.8-8.4-8.4V153.4z" />
@@ -490,7 +490,7 @@
                           </g>
                         </g>
                       </g>
-                      <path class="st8" d="M-276.4,414.9c0,0,714.8,1,1066.3,101.2l-48.4-16.9C392.3,391-274,369-274,369L-276.4,414.9z" />
+                      <path class="bridge st8" d="M-276.4,414.9c0,0,714.8,1,1066.3,101.2l-48.4-16.9C392.3,391-274,369-274,369L-276.4,414.9z" />
                     </g>
                   </g>
                   <g>
@@ -500,35 +500,35 @@
                     <clipPath id="SVGID_4_">
                       <use xlink:href="#SVGID_3_" style="overflow:visible;" />
                     </clipPath>
-                    <g class="st9" class="cloud-2">
-                      <g>
+                    <g class="st9">
+                      <g class="cloud-2">
                         <path class="st1" d="M571.8,103.3c-0.8,0-1.5-0.7-1.5-1.5c0-24.9,20.3-45.2,45.2-45.2c21.4,0,40,15.2,44.3,36.1
               					c0.2,0.8-0.4,1.6-1.2,1.8c-0.8,0.2-1.6-0.4-1.8-1.2c-4-19.5-21.4-33.7-41.4-33.7c-23.3,0-42.2,18.9-42.2,42.2
               					C573.3,102.7,572.6,103.3,571.8,103.3z" />
                       </g>
-                      <g>
+                      <g class="cloud-2">
                         <path class="st1" d="M701,162.4c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5c11.8,0,21.5-9.6,21.5-21.5s-9.6-21.5-21.5-21.5
               					c-4.3,0-8.5,1.3-12.1,3.7c-0.4,0.3-1,0.3-1.5,0.1c-0.5-0.2-0.8-0.7-0.9-1.2c-1.8-13.3-13.2-23.3-26.6-23.3
               					c-14.8,0-26.9,12.1-26.9,26.9c0,0.8-0.7,1.5-1.5,1.5s-1.5-0.7-1.5-1.5c0-16.5,13.4-29.9,29.9-29.9c14.2,0,26.3,10,29.2,23.7
               					c3.6-2,7.6-3,11.8-3c13.5,0,24.5,11,24.5,24.5S714.5,162.4,701,162.4z" />
                       </g>
-                      <g>
+                      <g class="cloud-2">
                         <path class="st1" d="M571.8,103.3h-48.6c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h48.6c0.8,0,1.5,0.7,1.5,1.5
               					C573.3,102.7,572.6,103.3,571.8,103.3z" />
                       </g>
-                      <g>
+                      <g class="cloud-2">
                         <path class="st1" d="M472.7,162.4h-8.4c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h8.4c0.8,0,1.5,0.7,1.5,1.5
               					S473.5,162.4,472.7,162.4z" />
                       </g>
-                      <g>
+                      <g class="cloud-2">
                         <path class="st1" d="M498.7,162.4h-14.2c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h14.2c0.8,0,1.5,0.7,1.5,1.5
               					S499.6,162.4,498.7,162.4z" />
                       </g>
-                      <g>
+                      <g class="cloud-2">
                         <path class="st1" d="M625.5,162.4H513.7c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h111.8c0.8,0,1.5,0.7,1.5,1.5
               					S626.3,162.4,625.5,162.4z" />
                       </g>
-                      <g>
+                      <g class="cloud-2">
                         <path class="st1" d="M701,162.4h-64.3c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5H701c0.8,0,1.5,0.7,1.5,1.5S701.8,162.4,701,162.4
               					z" />
                       </g>
@@ -541,7 +541,7 @@
                     <clipPath id="SVGID_6_">
                       <use xlink:href="#SVGID_5_" style="overflow:visible;" />
                     </clipPath>
-                    <g class="st10" class="fog">
+                    <g class="st10 fog">
                       <path class="st11" d="M822.8,430.6V708H-0.5V270c4.9-2.4,10.4-3.7,16.1-3.7c20.4,0,37,16.6,37,37c0,2.5-0.2,4.9-0.7,7.2
               				c12.5-5.1,26.1-7.9,40.4-7.9c58.1,0,105.3,46.4,106.7,104.1c9.5-10.4,23.2-16.9,38.4-16.9c20.7,0,38.6,12.1,47.1,29.6
               				c7.7-32.1,36.5-56,71-56c37.8,0,68.9,28.7,72.6,65.6c6.5-10.6,18.2-17.6,31.5-17.6c20.4,0,37,16.5,37,37c0,1.1-0.1,2.2-0.2,3.3
@@ -627,31 +627,34 @@
                     <clipPath id="SVGID_8_">
                       <use xlink:href="#SVGID_7_" style="overflow:visible;" />
                     </clipPath>
-                    <g class="st12" class="cloud-1">
-                      <g>
-                        <path class="st1" d="M109.6,133.7c-0.4,0-0.8-0.1-1.1-0.4c-8.5-8.5-13.2-19.8-13.2-31.8c0-24.8,20.2-44.9,44.9-44.9
-              					c17.6,0,33.7,10.4,40.9,26.4c0.3,0.8,0,1.6-0.7,2c-0.8,0.3-1.6,0-2-0.7c-6.8-15-21.8-24.6-38.2-24.6
-              					c-23.1,0-41.9,18.8-41.9,41.9c0,11.2,4.4,21.7,12.3,29.6c0.6,0.6,0.6,1.5,0,2.1C110.3,133.6,109.9,133.7,109.6,133.7z" />
-                      </g>
-                      <g>
-                        <path class="st1" d="M192.9,130c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5c12.6,0,22.8-10.2,22.8-22.8s-10.2-22.8-22.8-22.8
-              					s-22.8,10.2-22.8,22.8c0,0.8-0.7,1.5-1.5,1.5s-1.5-0.7-1.5-1.5c0-14.2,11.6-25.8,25.8-25.8s25.8,11.6,25.8,25.8
-              					S207.1,130,192.9,130z" />
-                      </g>
-                      <g>
-                        <path class="st1" d="M109.6,133.7H52.7c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h56.9c0.8,0,1.5,0.7,1.5,1.5
-              					S110.4,133.7,109.6,133.7z" />
-                      </g>
-                      <g>
-                        <path class="st1" d="M129.6,133.7h-12.1c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h12.1c0.8,0,1.5,0.7,1.5,1.5
-              					C131.1,133.1,130.4,133.7,129.6,133.7z" />
-                      </g>
-                      <g>
-                        <path class="st1" d="M135.6,133.7c-0.4,0-0.8-0.2-1.1-0.4c-0.1-0.1-0.1-0.1-0.2-0.2c-0.1-0.1-0.1-0.2-0.1-0.3s-0.1-0.2-0.1-0.3
-              					s0-0.2,0-0.3c0-0.4,0.2-0.8,0.4-1.1c0.6-0.6,1.6-0.6,2.1,0c0.3,0.3,0.4,0.7,0.4,1.1c0,0.1,0,0.2,0,0.3s-0.1,0.2-0.1,0.3
-              					s-0.1,0.2-0.1,0.3c-0.1,0.1-0.1,0.2-0.2,0.2C136.3,133.6,136,133.7,135.6,133.7z" />
-                      </g>
-                    </g>
+                    <path id="cloud1-fill" class="cloud-1" fill="#FFFFFF" d="M193.1,128.8c13.2,0,23.9-10.4,24.4-23.5c0.5-13.5-10.8-25.2-24.3-25.2
+              				c-4.8,0-9.4,1.4-13.2,3.8c-7.2-15.6-23.4-26.2-42-25c-21.6,1.4-39.1,19-40.2,40.7c-0.7,12.8,4.2,24.4,12.4,32.7h67.3
+              				c4.8,0,9.7-0.9,14-3.1C192.1,128.9,192.6,128.8,193.1,128.8z"/>
+              			<g id="cloud1-stroke" class="st13">
+              				<g class="cloud-1">
+              					<path class="st1" d="M109.6,133.7c-0.4,0-0.8-0.1-1.1-0.4c-8.5-8.5-13.2-19.8-13.2-31.8c0-24.8,20.2-44.9,44.9-44.9
+              						c17.6,0,33.7,10.4,40.9,26.4c0.3,0.8,0,1.6-0.7,2c-0.8,0.3-1.6,0-2-0.7c-6.8-15-21.8-24.6-38.2-24.6
+              						c-23.1,0-41.9,18.8-41.9,41.9c0,11.2,4.4,21.7,12.3,29.6c0.6,0.6,0.6,1.5,0,2.1C110.3,133.6,109.9,133.7,109.6,133.7z"/>
+              				</g>
+              				<g class="cloud-1">
+              					<path class="st1" d="M192.9,130c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5c12.6,0,22.8-10.2,22.8-22.8s-10.2-22.8-22.8-22.8
+              						s-22.8,10.2-22.8,22.8c0,0.8-0.7,1.5-1.5,1.5s-1.5-0.7-1.5-1.5c0-14.2,11.6-25.8,25.8-25.8s25.8,11.6,25.8,25.8
+              						S207.1,130,192.9,130z"/>
+              				</g>
+              				<g class="cloud-1">
+              					<path class="st1" d="M109.6,133.7H52.7c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h56.9c0.8,0,1.5,0.7,1.5,1.5
+              						S110.4,133.7,109.6,133.7z"/>
+              				</g>
+              				<g class="cloud-1">
+              					<path class="st1" d="M129.6,133.7h-12.1c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h12.1c0.8,0,1.5,0.7,1.5,1.5
+              						C131.1,133.1,130.4,133.7,129.6,133.7z"/>
+              				</g>
+              				<g class="cloud-1">
+              					<path class="st1" d="M135.6,133.7c-0.4,0-0.8-0.2-1.1-0.4c-0.1-0.1-0.1-0.1-0.2-0.2c-0.1-0.1-0.1-0.2-0.1-0.3s-0.1-0.2-0.1-0.3
+              						s0-0.2,0-0.3c0-0.4,0.2-0.8,0.4-1.1c0.6-0.6,1.6-0.6,2.1,0c0.3,0.3,0.4,0.7,0.4,1.1c0,0.1,0,0.2,0,0.3s-0.1,0.2-0.1,0.3
+              						s-0.1,0.2-0.1,0.3c-0.1,0.1-0.1,0.2-0.2,0.2C136.3,133.6,136,133.7,135.6,133.7z"/>
+              				</g>
+              			</g>
                   </g>
                 </g>
               </svg>
