Add cl-effect animation to nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header id="top">
     <div class="container">
       <a href="index.html"><img src="img/home/Logo-142x100.png" class="logo" alt="Tutu Logo"></a>
-      <nav>
+      <nav class="cl-effect">
         <ul>
           <li><a href="index.html#projects" target="_self" class="bookmark">Projects</a></li>
           <li><a href="about.html" target="_self">About</a></li>
