Delete unused code

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <!-- column 1 starts -->
               <?xml version="1.0" encoding="utf-8"?>
               <!-- Generator: Adobe Illustrator 24.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-              <svg version="1.1" id="sf-fog" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 600" style="enable-background:new 0 0 800 600;" xml:space="preserve">
+              <svg version="1.1" class="sf-fog" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 600" style="enable-background:new 0 0 800 600;" xml:space="preserve">
                 <style type="text/css">
                   .st0 {
                     clip-path: url(#SVGID_2_);
