Apply CSS grid to about page

--- a/about.html
+++ b/about.html
@@ -36,16 +36,16 @@
   <main id="about-me">
     <div>
 
-      <div id="who" class="container column col-lg-4">
-        <h1> Who is Tutu </h1>
+      <div id="who" class="container">
+        <div class="grid-container">
+        <h1 class="grid-col12-left grid-col-left"> Who is Tutu </h1>
       </div>
+    </div>
 
-      <div id="intro-details-1" class="row">
-        <div class="column col-lg-8">
+      <div id="intro-details-1" class="container">
+        <div class="grid-container">
 
-          <section class="container">
-            <!-- column 1 my intro 0 starts -->
-            <h2 class="transparent">Who</h2>
+          <section class="grid-col23-right grid-col-lr">
             <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
             <p class="brief">I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As
               one of the
@@ -57,39 +57,37 @@
         </div>
       </div>
 
+
+
       <div id="intro-details-2">
         <div class="container">
 
-          <div class="column col-md-6 col-lg-4" id="profile-img">
+<div class="grid-container">
+          <div class="grid-col1" id="profile-img">
             <picture>
               <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
               <img src="img/home/head-drawing@2.png" alt="Profile picture" width="200">
             </picture>
           </div>
 
-
-          <div class="row">
-
-            <!-- my intro 1 starts -->
-            <section class="column col-md-6 col-lg-4">
+            <section class="grid-col2 grid-col-left">
               <h2 class="hidden">More about me</h2>
               <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
                 process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
                 the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
             </section>
-            <!-- my intro 1 ends -->
 
 
-            <section class="column col-md-6 col-lg-4">
+            <section class="grid-col3 grid-col-right">
               <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
               <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social
                 mission
                 restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
                 Sciences, Chinese Culture Center (San Francisco) and etc.</p>
             </section>
-            <!-- my intro 2 ends -->
 
-          </div> <!-- wrap two columns -->
+
+        </div>
 
         </div>
       </div>
@@ -99,14 +97,13 @@
       <div id="skills">
         <div class="container">
 
-          <div class="column col-lg-4">
-            <h2>Skills & Tools</h2>
+          <div class="grid-container">
+            <h2 class="grid-col12-left">Skills & Tools</h2>
           </div>
 
-          <div class="row">
-            <div cass="column col-lg-8">
+          <div class="grid-container">
 
-                <section class="column col-md-6 col-lg-4">
+                <section class="grid-col2 grid-col-left">
                   <img src="img/icons/uxdesign.png" alt="ux design icon">
                   <h3 class="tool">UX/UI Design</h3>
                   <ul>
@@ -117,7 +114,7 @@
                   </ul>
                 </section>
 
-                <section class="column col-md-6 col-lg-4">
+                <section class="grid-col3 grid-col-right">
                   <img src="img/icons/cocreation.png" alt="co-creation icon">
                   <h3 class="tool">Co-creation</h3>
                   <ul>
@@ -127,7 +124,7 @@
                   </ul>
                 </section>
 
-                <section class="column col-md-6 col-lg-4">
+                <section class="grid-col2 grid-col-left">
                   <img src="img/icons/making.png" alt="2D 3D making icon">
                   <h3 class="tool">Making</h3>
                   <ul>
@@ -138,7 +135,6 @@
                   </ul>
                 </section>
 
-            </div>
           </div>
 
         </div> <!-- skills ends -->
