Update layout details

--- a/about.html
+++ b/about.html
@@ -36,24 +36,26 @@
   <main id="about-me">
     <div>
 
-      <div id="who" class="container column col-lg-4">
-        <h1> Who is Tutu </h1>
-      </div>
+      <div id="intro-details" class="row">
+        <div class="container">
 
-      <div id="intro-details-1" class="row">
-        <div class="column col-lg-8">
+          <div id="who" class="column col-lg-4">
+            <h1> Who is Tutu </h1>
+          </div>
 
-          <section class="container">
-            <!-- column 1 my intro 0 starts -->
-            <h2 class="transparent">Who</h2>
-            <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
-            <p class="brief">I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As
-              one of the
-              co-founders, I research and prototype with the clients and their users to solve business challenges. </p>
+          <div id="intro-details-1">
+            <section class="column col-lg-8">
+              <h2 class="hidden">Who</h2>
+              <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
+              <p class="brief">I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As
+                one of the
+                co-founders, I research and prototype with the clients and their users to solve business challenges.
+              </p>
 
-            <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
+              <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
+            </section>
+          </div>
 
-          </section>
         </div>
       </div>
 
@@ -99,47 +101,50 @@
       <div id="skills">
         <div class="container">
 
-          <div class="column col-lg-4">
+<div class="row">
+          <div class="column col-md-6 col-lg-4">
             <h2>Skills & Tools</h2>
           </div>
+        </div>
 
-          <div class="row">
-            <div cass="column col-lg-8">
 
-                <section class="column col-md-6 col-lg-4">
-                  <img src="img/icons/uxdesign.png" alt="ux design icon">
-                  <h3 class="tool">UX/UI Design</h3>
-                  <ul>
-                    <li>User research/synthesis/test</li>
-                    <li>Lo-fi & hi-fi prototype/design system</li>
-                    <li>Sketch App/Invision/Figma</li>
-                    <li>HTML</li>
-                  </ul>
-                </section>
+          <div id="3-tools" class="row">
+            <div class="column col-md-6 col-lg-8">
 
-                <section class="column col-md-6 col-lg-4">
-                  <img src="img/icons/cocreation.png" alt="co-creation icon">
-                  <h3 class="tool">Co-creation</h3>
-                  <ul>
-                    <li>Design Sprint/Design Thinking</li>
-                    <li>Future thinking frameworks</li>
-                    <li>Design experimentation</li>
-                  </ul>
-                </section>
+              <section class="column col-lg-4">
+                <img src="img/icons/uxdesign.png" alt="ux design icon">
+                <h3 class="tool">UX/UI Design</h3>
+                <ul>
+                  <li>User research/synthesis/test</li>
+                  <li>Lo-fi & hi-fi prototype/design system</li>
+                  <li>Sketch App/Invision/Figma</li>
+                  <li>HTML</li>
+                </ul>
+              </section>
 
-                <section class="column col-md-6 col-lg-4">
-                  <img src="img/icons/making.png" alt="2D 3D making icon">
-                  <h3 class="tool">Making</h3>
-                  <ul>
-                    <li>Photoshop/Illustrator/Indesign</li>
-                    <li>Photography/Lightroom/Premiere</li>
-                    <li>Model-making/laser cut/3D print</li>
-                    <li>Rhino/Solidworks/Keyshot</li>
-                  </ul>
-                </section>
+              <section class="column col-lg-4">
+                <img src="img/icons/cocreation.png" alt="co-creation icon">
+                <h3 class="tool">Co-creation</h3>
+                <ul>
+                  <li>Design Sprint/Design Thinking</li>
+                  <li>Future thinking frameworks</li>
+                  <li>Design experimentation</li>
+                </ul>
+              </section>
+
+              <section class="column col-lg-4">
+                <img src="img/icons/making.png" alt="2D 3D making icon">
+                <h3 class="tool">Making</h3>
+                <ul>
+                  <li>Photoshop/Illustrator/Indesign</li>
+                  <li>Photography/Lightroom/Premiere</li>
+                  <li>Model-making/laser cut/3D print</li>
+                  <li>Rhino/Solidworks/Keyshot</li>
+                </ul>
+              </section>
 
             </div>
-          </div>
+          </div> <!-- wrap 3 tool sections -->
 
         </div> <!-- skills ends -->
       </div> <!-- wrap skills -->
