Update column layout and image size

--- a/about.html
+++ b/about.html
@@ -39,11 +39,15 @@
       <div id="intro-details" class="row">
         <div class="container">
 
-          <div id="who" class="column col-lg-4">
             <h1> Who is Tutu </h1>
-          </div>
+
 
           <div id="intro-details-1">
+
+            <section class="column col-lg-4">
+              <br>
+            </section>
+
             <section class="column col-lg-8">
               <h2 class="hidden">Who</h2>
               <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
@@ -101,17 +105,22 @@
       <div id="skills">
         <div class="container">
 
-          <div class="column col-md-6 col-lg-4">
+          <div>
             <h2>Skills & Tools</h2>
           </div>
 
 
 
           <div id="3-tools" class="row">
-            <div class="column col-md-6 col-lg-8">
+
+            <section class="column col-lg-4">
+              <br>
+            </section>
+
+            <section class="column col-lg-8">
 
               <div class="row">
-                <section class="column col-lg-6">
+                <section class="column col-md-6 col-lg-6">
                   <img src="img/icons/uxdesign.png" alt="ux design icon">
                   <h3 class="tool">UX/UI Design</h3>
                   <ul>
@@ -122,7 +131,7 @@
                   </ul>
                 </section>
 
-                <section class="column col-lg-6">
+                <section class="column col-md-6 col-lg-6">
                   <img src="img/icons/cocreation.png" alt="co-creation icon">
                   <h3 class="tool">Co-creation</h3>
                   <ul>
@@ -133,7 +142,7 @@
                 </section>
               </div>
 
-              <section class="column col-lg-6">
+              <section class="column col-md-6 col-lg-6">
                 <img src="img/icons/making.png" alt="2D 3D making icon">
                 <h3 class="tool">Making</h3>
                 <ul>
@@ -144,7 +153,7 @@
                 </ul>
               </section>
 
-            </div>
+            </section>
           </div> <!-- wrap 3 tool sections -->
 
         </div> <!-- skills ends -->
