--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -33,7 +33,7 @@
     </div>
   </header>
 
-  <main id="project-title">
+  <main id="project-title" class="project-page">
 
     <div class="container">
       <picture>
