--- a/index.html
+++ b/index.html
@@ -119,7 +119,15 @@
 
             <div class="column col-md-6 col-lg-8">
               <!-- column 1 starts -->
+
               <img src="svg/sf-fog.svg" alt="San Francisco">
+
+              <object type="img/svg+xml" data="svg/sf-fog.svg">
+                <img src="svg/fallback/sf-fog-01.png" alt="San Francisco">
+              </object>
+
+              <embed type="image/svg+xml" src="svg/sf-fog.svg">
+
 
             </div>
 
