Link JavaScript in HTML files

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       <div id="intro-details" class="row">
         <div class="container">
 
-            <h1> Who is Tutu </h1>
+          <h1> Who is Tutu </h1>
 
 
           <div id="intro-details-1">
@@ -186,6 +186,10 @@
 
     </div><!-- footer wrapper ends -->
   </footer>
+
+
+  <!-- JavaScript -->
+  <script src="js/script.js"></script>
 
 </body>
 
