--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -107,8 +107,8 @@
       <div class="row">
 
         <div class="container">
-        <h2> The Moments</h2>
-      </div>
+          <h2> The Moments</h2>
+        </div>
 
         <section class="container">
           <h3>Engaging and building trust with users </h3>
@@ -257,6 +257,11 @@
 
     </div><!-- footer wrapper ends -->
   </footer>
+
+
+
+  <!-- JavaScript -->
+  <script src="js/script.js"></script>
 
 </body>
 
