--- a/index.html
+++ b/index.html
@@ -628,32 +628,32 @@
                     </clipPath>
                     <path id="cloud1-fill" class="cloud-1" fill="#FFFFFF" d="M193.1,128.8c13.2,0,23.9-10.4,24.4-23.5c0.5-13.5-10.8-25.2-24.3-25.2
               				c-4.8,0-9.4,1.4-13.2,3.8c-7.2-15.6-23.4-26.2-42-25c-21.6,1.4-39.1,19-40.2,40.7c-0.7,12.8,4.2,24.4,12.4,32.7h67.3
-              				c4.8,0,9.7-0.9,14-3.1C192.1,128.9,192.6,128.8,193.1,128.8z"/>
-              			<g id="cloud1-stroke" class="st13">
-              				<g class="cloud-1">
-              					<path class="st1" d="M109.6,133.7c-0.4,0-0.8-0.1-1.1-0.4c-8.5-8.5-13.2-19.8-13.2-31.8c0-24.8,20.2-44.9,44.9-44.9
+              				c4.8,0,9.7-0.9,14-3.1C192.1,128.9,192.6,128.8,193.1,128.8z" />
+                    <g id="cloud1-stroke" class="st13">
+                      <g class="cloud-1">
+                        <path class="st1" d="M109.6,133.7c-0.4,0-0.8-0.1-1.1-0.4c-8.5-8.5-13.2-19.8-13.2-31.8c0-24.8,20.2-44.9,44.9-44.9
               						c17.6,0,33.7,10.4,40.9,26.4c0.3,0.8,0,1.6-0.7,2c-0.8,0.3-1.6,0-2-0.7c-6.8-15-21.8-24.6-38.2-24.6
-              						c-23.1,0-41.9,18.8-41.9,41.9c0,11.2,4.4,21.7,12.3,29.6c0.6,0.6,0.6,1.5,0,2.1C110.3,133.6,109.9,133.7,109.6,133.7z"/>
-              				</g>
-              				<g class="cloud-1">
-              					<path class="st1" d="M192.9,130c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5c12.6,0,22.8-10.2,22.8-22.8s-10.2-22.8-22.8-22.8
+              						c-23.1,0-41.9,18.8-41.9,41.9c0,11.2,4.4,21.7,12.3,29.6c0.6,0.6,0.6,1.5,0,2.1C110.3,133.6,109.9,133.7,109.6,133.7z" />
+                      </g>
+                      <g class="cloud-1">
+                        <path class="st1" d="M192.9,130c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5c12.6,0,22.8-10.2,22.8-22.8s-10.2-22.8-22.8-22.8
               						s-22.8,10.2-22.8,22.8c0,0.8-0.7,1.5-1.5,1.5s-1.5-0.7-1.5-1.5c0-14.2,11.6-25.8,25.8-25.8s25.8,11.6,25.8,25.8
-              						S207.1,130,192.9,130z"/>
-              				</g>
-              				<g class="cloud-1">
-              					<path class="st1" d="M109.6,133.7H52.7c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h56.9c0.8,0,1.5,0.7,1.5,1.5
-              						S110.4,133.7,109.6,133.7z"/>
-              				</g>
-              				<g class="cloud-1">
-              					<path class="st1" d="M129.6,133.7h-12.1c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h12.1c0.8,0,1.5,0.7,1.5,1.5
-              						C131.1,133.1,130.4,133.7,129.6,133.7z"/>
-              				</g>
-              				<g class="cloud-1">
-              					<path class="st1" d="M135.6,133.7c-0.4,0-0.8-0.2-1.1-0.4c-0.1-0.1-0.1-0.1-0.2-0.2c-0.1-0.1-0.1-0.2-0.1-0.3s-0.1-0.2-0.1-0.3
+              						S207.1,130,192.9,130z" />
+                      </g>
+                      <g class="cloud-1">
+                        <path class="st1" d="M109.6,133.7H52.7c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h56.9c0.8,0,1.5,0.7,1.5,1.5
+              						S110.4,133.7,109.6,133.7z" />
+                      </g>
+                      <g class="cloud-1">
+                        <path class="st1" d="M129.6,133.7h-12.1c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h12.1c0.8,0,1.5,0.7,1.5,1.5
+              						C131.1,133.1,130.4,133.7,129.6,133.7z" />
+                      </g>
+                      <g class="cloud-1">
+                        <path class="st1" d="M135.6,133.7c-0.4,0-0.8-0.2-1.1-0.4c-0.1-0.1-0.1-0.1-0.2-0.2c-0.1-0.1-0.1-0.2-0.1-0.3s-0.1-0.2-0.1-0.3
               						s0-0.2,0-0.3c0-0.4,0.2-0.8,0.4-1.1c0.6-0.6,1.6-0.6,2.1,0c0.3,0.3,0.4,0.7,0.4,1.1c0,0.1,0,0.2,0,0.3s-0.1,0.2-0.1,0.3
-              						s-0.1,0.2-0.1,0.3c-0.1,0.1-0.1,0.2-0.2,0.2C136.3,133.6,136,133.7,135.6,133.7z"/>
-              				</g>
-              			</g>
+              						s-0.1,0.2-0.1,0.3c-0.1,0.1-0.1,0.2-0.2,0.2C136.3,133.6,136,133.7,135.6,133.7z" />
+                      </g>
+                    </g>
                   </g>
                 </g>
               </svg>
@@ -700,6 +700,11 @@
 
     </div><!-- footer wrapper ends -->
   </footer>
+
+
+
+  <!-- JavaScript -->
+  <script src="js/script.js"></script>
 
 </body>
 
